--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+.App {
+  width: 100%;
+  height: 150;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
+table {
+  border: 2px solid rgb(139, 34, 99);
+  width: 800px;
+  height: 200px;
+}
+th {
+  border-bottom: 1px solid rgb(0, 0, 0);
+}
+  
+td {
+  text-align: left;
+}
+tr 
+{
+  text-align: right;
+}
