--- a/src/App.css
+++ b/src/App.css
@@ -40,23 +40,26 @@
   width: 100%;
   height: 150;
   display: flex;
-  justify-content: center;
-  align-items: center;
+justify-content: center;
+  align-items: right;
 }
-  
-table {
-  border: 2px solid rgb(139, 34, 99);
-  width: 800px;
-  height: 200px;
+table,  tr, td {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 th {
   border-bottom: 1px solid rgb(0, 0, 0);
 }
+table {
+  text-align: center;
+}
+tr{
+  text-align: right;
   
-td {
+}
+td{
   text-align: left;
 }
-tr 
-{
-  text-align: right;
+table {
+  text-align: center;
 }
