--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ table,  tr, td {
   border-collapse: collapse;
 }
 th {
+  border: 1px solid black;
   border-bottom: 1px solid rgb(0, 0, 0);
 }
 table {
